# app_validade

App/: Cargo.toml  README.md  ngrok  ngrok-v3-stable-linux-amd64.tgz  package-lock.json  package.json
App/dados/: logins.db  produtos.db
App/src/: main.rs
App/src-tauri/: Cargo.toml  tauri.conf.json
App/src-tauri/src/: lib.rs
